# chronusq_public

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  CITE.txt  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  gencov.sh
src/: CMakeLists.txt
src/basisset/: CMakeLists.txt  basisset.cxx  basisset_eval.cxx  reference.cxx
src/coupledcluster/: CMakeLists.txt  TAManager.cxx  impl.cxx
src/cqlinalg/: CMakeLists.txt  blasext.cxx  blasutil.cxx  eig.cxx  factorization.cxx  matfunc.cxx  svd.cxx
src/cubegen/: CMakeLists.txt  cubegrid.cxx  impl.cxx
src/cxxapi/: CMakeLists.txt  chronusq.cxx  output.cxx  procedural.cxx
src/cxxapi/input/: basisopts.cxx  coupledclusteropts.cxx  cubeopts.cxx  freeparsers.cxx  gauxcopts.cxx  geomopts.cxx  intsopts.cxx  mcscfopts.cxx  miscopts.cxx  molopts.cxx  parse.cxx  perturbopts.cxx  respopts.cxx  rtopts.cxx  saverefs.cxx  scfcubeopts.cxx  scfopts.cxx  singleslateropts.cxx
src/dft/: CMakeLists.txt  epc.cxx  gauxcutils.cxx  grad_util.cxx  util.cxx
src/findiff/: CMakeLists.txt  geomgrad.cxx
src/fourcomp/: 4ctest.cxx  CMakeLists.txt  fourcomp.cxx  impl.cxx
src/geometrymodifier/: CMakeLists.txt  fileio.cxx  impl.cxx  print.cxx  velocityverlet.cxx
src/grid/: CMakeLists.txt  eulermac.cxx  gausscheb.cxx  gausslegendre.cxx  lebedev.cxx  lebedev_110.cxx  lebedev_14.cxx  lebedev_146.cxx  lebedev_170.cxx  lebedev_194.cxx  lebedev_230.cxx  lebedev_26.cxx  lebedev_266.cxx  lebedev_302.cxx  lebedev_38.cxx  lebedev_50.cxx  lebedev_590.cxx  lebedev_6.cxx  lebedev_74.cxx  lebedev_86.cxx  lebedev_974.cxx
src/itersolver/: impl.cxx
src/manybodywavefunction/: impl.cxx
src/matrix/: CMakeLists.txt  components.cxx  impl.cxx  spatialtospinor.cxx  transform.cxx
src/matrix/arithmetic/: matrix.cxx  paulispinormatrices.cxx  scaledmatrix.cxx
src/mcscf/: impl.cxx
src/mcwavefunction/: CMakeLists.txt  impl.cxx
src/molecule/: CMakeLists.txt  molecule.cxx
src/orthogonalization/: CMakeLists.txt  impl.cxx
src/particleintegrals/: CMakeLists.txt  impl.cxx  spatialtospinor.cxx  transform.cxx
src/particleintegrals/aointegrals/: aointegrals_onee_drivers.cxx  aointegrals_onee_inhouse.cxx  aointegrals_twoe_asymm_ri.cxx  aointegrals_twoe_inhouse.cxx  aointegrals_twoe_libcint.cxx  aointegrals_twoe_libint.cxx  aointegrals_twoe_ri.cxx  aointegrals_utilities.cxx  giaointegrals_onee_drivers.cxx  giaointegrals_onee_inhouse.cxx  giaointegrals_twoe_drivers.cxx  giaointegrals_twoe_inhouse.cxx
src/perturb/: CMakeLists.txt  impl.cxx
src/quantum/: CMakeLists.txt  impl.cxx
src/realtime/: CMakeLists.txt  fields.cxx  impl_ms.cxx
src/response/: impl.cxx
src/singleslater/: CMakeLists.txt  impl.cxx
src/wavefunction/: impl.cxx
src/x2c/: CMakeLists.txt  atomic.cxx  impl.cxx  x2c.cxx
tests/: CMakeLists.txt  ut.cxx  ut.hpp.in
tests/coupledcluster/: CMakeLists.txt  ccsd.cxx  coupledcluster.hpp  eom-ccsd.cxx
tests/coupledcluster/reference/: h2o_631g_ghf_ccsd.bin.ref  h2o_631g_ghf_ccsd_frozencore.bin.ref  h2o_631g_ghf_ccsd_frozencorevirt.bin.ref  h2o_631g_ghf_ccsd_frozenvirt.bin.ref  h2o_631g_ghf_eom_ccsd.bin.ref  h2o_631g_ghf_eom_ccsd_frozencore.bin.ref  h2o_631g_ghf_eom_ccsd_frozencorevirt.bin.ref  h2o_631g_ghf_eom_ccsd_frozenvirt.bin.ref  h2o_sto3g_ghf_ccsd.bin.ref  na_631G_cationRef_x2c_cvc_eom_ccsd.bin.ref  na_631G_x2c_eom_ccsd.bin.ref  na_plus_sto3g_x2c_eom_ccsd.bin.ref
tests/dynamics/: CMakeLists.txt  dynamics.hpp  ehrenfest.cxx
tests/dynamics/reference/: h2o_neoehrenfest_rb3lyp_epc17_mmut.bin.ref  h2o_neoehrenfest_rb3lyp_epc17_mmut_tpb.bin.ref  hf_ehrenfest_rb3lyp_mmut.bin.ref  hf_ehrenfest_rhf_mmut.bin.ref
tests/func/: CMakeLists.txt  contract.cxx  cqmem.cxx  davidson.cxx  func.hpp  gplhr.cxx  ordqz.cxx
tests/func/input/: contract_ref.inp
tests/func/reference/: bcsstkm05.hdf5  complex_Hermitian.hdf5  complex_nonHermitian.hdf5  contract.hdf5  pde2961.hdf5  real_Hermitian.hdf5  real_nonHermitian.hdf5
tests/mcscf/: CMakeLists.txt  cas.cxx  mcscf.hpp  ras.cxx
tests/mcscf/reference/: FourC_dcg_1DetMCSCF_wfield_SCFwfieldMCSCFwfield_dontusescffield.bin.ref  FourC_dcg_1DetMCSCF_wfield_SCFwfieldMCSCFwofield.bin.ref  FourC_dcg_1DetMCSCF_wfield_SCFwofieldMCSCFwfield.bin.ref  FourC_dcg_1DetMCSCF_wfield_useSCFfield.bin.ref  OneC_1DetMCSCF_wfield_SCFwfieldMCSCFwfield_dontusescffield.bin.ref  OneC_1DetMCSCF_wfield_SCFwofieldMCSCFwfield.bin.ref  OneC_1DetMCSCF_wfield_useSCFfield.bin.ref  TwoC_1DetMCSCF_wfield_SCFwfieldMCSCFwfield_dontusescffield.bin.ref  TwoC_1DetMCSCF_wfield_SCFwofieldMCSCFwfield.bin.ref  U91+_DCB_fci.bin.ref  U91+_DCB_fci_no_nagetive_rotation.bin.ref  al_6-31G_1c_casci.bin.ref  al_6-31G_1c_casscf.bin.ref  al_6-31G_4c_bc_casci.bin.ref  al_6-31G_4c_bc_casscf.bin.ref  al_6-31G_4c_bc_rasci.bin.ref  al_6-31G_4c_dc_casci.bin.ref  al_6-31G_4c_dc_casscf.bin.ref  al_6-31G_4c_dc_rasci.bin.ref  al_6-31G_4c_dcb_casci.bin.ref  al_6-31G_4c_dcb_casscf.bin.ref  al_6-31G_4c_dcb_rasci.bin.ref  al_6-31G_4c_dcg_casci.bin.ref  al_6-31G_4c_dcg_casscf.bin.ref  al_6-31G_4c_dcg_rasci.bin.ref  al_6-31G_4c_dcssss_casci.bin.ref  al_6-31G_4c_dcssss_casscf.bin.ref  al_6-31G_4c_dcssss_rasci.bin.ref  al_6-31G_x2c_casci.bin.ref  al_6-31G_x2c_casscf.bin.ref  al_6-31G_x2c_rasci.bin.ref  al_ghf_6-31g_casci_osc_str.bin.ref  be_sto-3G_1c_casci_swap.bin.ref  (+15 more)
tests/pt/: CMakeLists.txt  pt.cxx  pt.hpp
tests/resp/: CMakeLists.txt  gpp.cxx  gres_gga.cxx  gres_hf.cxx  gres_hgga.cxx  gres_lsda.cxx  misc.cxx  neohf_res.cxx  resp.hpp  rfdr.cxx  rmor.cxx  rpp.cxx  rres.cxx  rres_gga.cxx  rres_giao.cxx  rres_hgga.cxx  rres_lda.cxx  upp.cxx  ures_gga.cxx  ures_hf.cxx  ures_hgga.cxx  ures_lsda.cxx  x2cres_gga.cxx  x2cres_giao.cxx  x2cres_hf.cxx  x2cres_hgga.cxx  x2cres_lsda.cxx
tests/rt/: CMakeLists.txt  grt.cxx  neo_rrt.cxx  ri_neo_rrt.cxx  rrt.cxx  rt.hpp  urt.cxx
tests/scf/: CMakeLists.txt  cediis.cxx  fourcomphf.cxx  gauxc_ks.cxx  ghf.cxx  ghf_giao.cxx  gks_giao.cxx  ks.cxx  misc.cxx  neo_rhf.cxx  neo_rks.cxx  qn.cxx  rhf.cxx  rhf_giao.cxx  ri.cxx  rks.cxx  rohf.cxx  rohf_giao.cxx  scf.hpp  uhf.cxx  uhf_giao.cxx  uks.cxx  x2c_giao.cxx  x2chf.cxx  x2cks.cxx  x2cks_giao.cxx
(+1665 files in other folders)
